--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity
             android:name=".Drawer"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TextField"></activity>
+        <activity android:name=".TextField" />
+        <activity android:name=".ButtonActivity"></activity>
     </application>
 
 </manifest>
